Попытался писать фронт без знания фронта. Получилось так себе, ладно

--- a/src/main/resources/templates/reports/incomeReport.html
+++ b/src/main/resources/templates/reports/incomeReport.html
@@ -9,8 +9,8 @@
 <table>
     <thead>
     <tr>
-        <th>Категория</th>
-        <th>Сумма доходов</th>
+        <th>Category</th>
+        <th>Income sum</th>
     </tr>
     </thead>
     <tbody>
